--- a/index.html
+++ b/index.html
@@ -8,30 +8,34 @@
   </head>
   <body>
     <div class="container">
-      <div class="row">
-        <div class="col-md-4.5">
-          <h1>Welcome to Wikipedia,</h1>
-          <p>the free encyclopedia that anyone can edit.
-          5,261,702 articles in English</p>
-        </div>
-        <div class="col-md-3">
-        </div>
-        <div class="col-md-4.5">
-          <ul>
-            <li>Arts</li>
-            <li>Biography</li>
-            <li>Geography</li>
-          </ul>
-          <ul>
-            <li>History</li>
-            <li>Mathematics</li>
-            <li>Science</li>
-          </ul>
-          <ul>
-            <li>Society</li>
-            <li>Technology</li>
-            <li>All portals</li>
-          </ul>
+      <div class="well well-sm">
+        <div class="row">
+          <div class="col-md-4">
+            <h1>Welcome to Wikipedia,</h1>
+            <p>the free encyclopedia that anyone can edit.
+            5,261,702 articles in English</p>
+          </div>
+          <div class="col-md-4">
+          </div>
+          <div class="col-md-4" id="head-link">
+            <div class="row">
+              <ul class="col-md-4">
+                <li>Arts</li>
+                <li>Biography</li>
+                <li>Geography</li>
+              </ul>
+              <ul class="col-md-4">
+                <li>History</li>
+                <li>Mathematics</li>
+                <li>Science</li>
+              </ul>
+              <ul class="col-md-4">
+                <li>Society</li>
+                <li>Technology</li>
+                <li>All portals</li>
+              </ul>
+            </div>
+          </div>
         </div>
       </div>
     </div>
