add sidebar with links

--- a/index.html
+++ b/index.html
@@ -8,36 +8,142 @@
   </head>
   <body>
     <div class="container">
-      <div class="well well-sm">
-        <div class="row">
-          <div class="col-md-4">
-            <h1>Welcome to Wikipedia,</h1>
-            <p>the free encyclopedia that anyone can edit.
-            5,261,702 articles in English</p>
+      <div class="row">
+        <div class="col-md-2"
+          <div class="sidebar">
+          <img src="img/logo.png" alt="wikipedia logo" id="main-logo">
+          <ul>
+            <a href="#"><li>Main page</li></a>
+            <a href="#"><li>Contents</li></a>
+            <a href="#"><li>Featured content</li></a>
+            <a href="#"><li>Current events</li></a>
+            <a href="#"><li>Random article</li></a>
+            <a href="#"><li>Donate to Wikipedia</li></a>
+            <a href="#"><li>Wikipedia store</li></a>
+          </ul>
+          <p>Interaction</p>
+          <ul>
+            <a href="#"><li>Help</li></a>
+            <a href="#"><li>About Wikipedia</li></a>
+            <a href="#"><li>Community portal</li></a>
+            <a href="#"><li>Recent changes</li></a>
+            <a href="#"><li>Contact page</li></a>
+          </ul>
+          <p>Tools</p>
+          <ul>
+            <a href="#"><li>What links here</li></a>
+            <a href="#"><li>Related changes</li></a>
+            <a href="#"><li>Upload file</li></a>
+            <a href="#"><li>Special pages</li></a>
+            <a href="#"><li>Permanent link</li></a>
+            <a href="#"><li>Page information</li></a>
+            <a href="#"><li>Wikidata item</li></a>
+          </ul>
+          <p>Print/export</p>
+          <ul>
+            <a href="#"><li>Create a book</li></a>
+            <a href="#"><li>Download as PDF</li></a>
+            <a href="#"><li>Printable version</li></a>
+          </ul>
+          <p>In other projects</p>
+          <ul>
+            <a href="#"><li>Wikimedia Commons</li></a>
+            <a href="#"><li>MediaWiki</li></a>
+            <a href="#"><li>Meta-Wiki</li></a>
+            <a href="#"><li>Wikispecies</li></a>
+            <a href="#"><li>Wikibooks</li></a>
+            <a href="#"><li>Wikidata</li></a>
+            <a href="#"><li>Wikinews</li></a>
+            <a href="#"><li>Wikiquote</li></a>
+            <a href="#"><li>Wikisource</li></a>
+            <a href="#"><li>Wikiversity</li></a>
+            <a href="#"><li>Wikivoyage</li></a>
+          </ul>
+          <p>Languages</p>
+          <ul>
+            <a href="#"><li>Simple English</li></a>
+            <a href="#"><li>العربية</li></a>
+            <a href="#"><li>Bahasa Indonesia</li></a>
+            <a href="#"><li>Bahasa Melayu</li></a>
+            <a href="#"><li>Bosanski</li></a>
+            <a href="#"><li>Български</li></a>
+            <a href="#"><li>Català</li></a>
+            <a href="#"><li>Čeština</li></a>
+            <a href="#"><li>Dansk</li></a>
+            <a href="#"><li>Deutsch</li></a>
+            <a href="#"><li>Eesti</li></a>
+            <a href="#"><li>Ελληνικά</li></a>
+            <a href="#"><li>Español</li></a>
+            <a href="#"><li>Esperanto</li></a>
+            <a href="#"><li>Euskara</li></a>
+            <a href="#"><li>فارسی</li></a>
+            <a href="#"><li>Français</li></a>
+            <a href="#"><li>Galego</li></a>
+            <a href="#"><li>한국어</li></a>
+            <a href="#"><li>עברית</li></a>
+            <a href="#"><li>Hrvatski</li></a>
+            <a href="#"><li>Italiano</li></a></li></a>
+            <a href="#"><li>ქართული</li></a>
+            <a href="#"><li>Latviešu</li></a>
+            <a href="#"><li>Lietuvių</li></a>
+            <a href="#"><li>Magyar</li></a>
+            <a href="#"><li>Nederlands</li></a>
+            <a href="#"><li>日本語</li></a>
+            <a href="#"><li>Norsk bokmål</li></a>
+            <a href="#"><li>Norsk nynorsk</li></a>
+            <a href="#"><li>Polski</li></a>
+            <a href="#"><li>Português</li></a>
+            <a href="#"><li>Română</li></a>
+            <a href="#"><li>Русский</li></a>
+            <a href="#"><li>Slovenčina</li></a>
+            <a href="#"><li>Slovenščina</li></a>
+            <a href="#"><li>Српски / srpski</li></a>
+            <a href="#"><li>Srpskohrvatski / српскохрватски</li></a>
+            <a href="#"><li>Suomi</li></a>
+            <a href="#"><li>Svenska</li></a>
+            <a href="#"><li>ไทย</li></a>
+            <a href="#"><li>Tiếng Việt</li></a>
+            <a href="#"><li>Türkçe</li></a>
+            <a href="#"><li>Українська</li></a>
+            <a href="#"><li>中文</li></a>
+            <a href="#"><li>Complete list</li></a>
+          </ul>
           </div>
-          <div class="col-md-4">
-          </div>
-          <div class="col-md-4" id="head-link">
-            <div class="row">
-              <ul class="col-md-4">
-                <li>Arts</li>
-                <li>Biography</li>
-                <li>Geography</li>
-              </ul>
-              <ul class="col-md-4">
-                <li>History</li>
-                <li>Mathematics</li>
-                <li>Science</li>
-              </ul>
-              <ul class="col-md-4">
-                <li>Society</li>
-                <li>Technology</li>
-                <li>All portals</li>
-              </ul>
+        </div>
+        <div class="col-md-10">
+
+            <div class="well well-sm">
+              <div class="row">
+                <div class="col-md-4">
+                  <h1>Welcome to Wikipedia,</h1>
+                  <p>the free encyclopedia that anyone can edit.
+                  5,261,702 articles in English</p>
+                </div>
+                <div class="col-md-4">
+                </div>
+                <div class="col-md-4" id="head-link">
+                  <div class="row">
+                    <ul class="col-md-4">
+                      <a href="#"><li>Arts</li></a>
+                      <a href="#"><li>Biography</li></a>
+                      <a href="#"><li>Geography</li></a>
+                    </ul>
+                    <ul class="col-md-4">
+                      <a href="#"><li>History</li></a>
+                      <a href="#"><li>Mathematics</li></a>
+                      <a href="#"><li>Science</li></a>
+                    </ul>
+                    <ul class="col-md-4">
+                      <a href="#"><li>Society</li></a>
+                      <a href="#"><li>Technology</li></a>
+                      <a href="#"><li>All portals</li></a>
+                    </ul>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
-      </div>
     </div>
   </body>
 </html>
