--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
     <title>Wikipedia, the free encyclopedia</title>
   </head>
   <body>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-2"
-          <div class="sidebar">
+        <div class="side-float">
           <img src="img/logo.png" alt="wikipedia logo" id="main-logo">
           <ul>
             <a href="#"><li>Main page</li></a>
@@ -109,11 +106,9 @@
             <a href="#"><li>Complete list</li></a>
           </ul>
           </div>
-        </div>
-        <div class="col-md-10">
-
-            <div class="well well-sm">
-              <div class="row">
+        <div class="container">
+        <div class="main-float">
+              <div class="row well well-sm">
                 <div class="col-md-4">
                   <h1>Welcome to Wikipedia,</h1>
                   <p>the free encyclopedia that anyone can edit.
@@ -141,9 +136,77 @@
                   </div>
                 </div>
               </div>
+            <div class="row">
+              <div class="col-md-7">
+                <div class="panel panel-success">
+                  <div class="panel-heading">
+                    <h2 class="panel-title">From today's featured article</h2>
+                  </div>
+                  <div class="panel-body green-panel">
+                    <p>The Earth-grazing meteoroid of 13 October 1990 entered the atmosphere above Czechoslovakia and Poland and, after 9.8 seconds, returned to space. Named EN131090, the 44-kilogram (97 lb) meteoroid was observed travelling 409 kilometres (254 mi) at a speed of 42 km/s (26 mi/s) by cameras of the European Fireball Network. Its apparent magnitude peaked at −6.3, several times brighter than Venus's peak magnitude. Observations of such events are quite rare; this was the second recorded by scientific astronomical instruments (after the 1972 Great Daylight Fireball) and the first recorded from two distant positions, which enabled the calculation of several of its orbital characteristics. The encounter with Earth significantly changed its orbit and, to a smaller extent, some of its physical properties, including its mass and the structure of its upper layer. If the meteoroid had reached the lower atmosphere, it would have overheated and exploded high above the ground, leaving at most a few small meteorites that posed no danger to the Earth's surface. (Full article...)
+                    </p>
+                  </div>
+                </div>
+                <div class="panel panel-success">
+                  <div class="panel-heading">
+                    <h2 class="panel-title">Did you know...</h2>
+                  </div>
+                  <div class="panel-body green-panel">
+                    <ul>
+                      <li>... that after Edmund Kalau (pictured) spent his childhood in the Hitler Youth, he converted to Christianity and served in Palau and Yap in the Liebenzell Mission?</li>
+                      <li>... that the philosophy journal Between the Species took its name from a fictional periodical mentioned in a George Abbe novel?</li>
+                      <li>... that the science fiction video game Tharsis, inspired by the sinking of the whaling ship Essex, allows the crew of the player's spacecraft to use cannibalism to survive?</li>
+                      <li>... that both the 5-8 Club and Matt's Bar, two Minneapolis eateries on the same street, claim to have invented the Juicy Lucy cheeseburger?</li>
+                      <li>... that the band The Mutants developed from the idea of an album set out to retrace the roots of punk, new wave, and ska, featuring an all-star cast of punk musicians?</li>
+                      <li>... that Anne Ramberg was awarded the H. M. The King's Medal of 12th size to wear on a blue ribbon for her work in the Swedish justice system?</li>
+                      <li>... that Tony Award-winning Broadway actress and singer Lillian Hayman played Sadie Gray on the American soap opera One Life to Live for 17 years?</li>
+                      <li>... that if you bend indium it might cry?</li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            <div class="col-md-5">
+              <div class="panel panel-info">
+                <div class="panel-heading">
+                  <h2 class="panel-title">In the news</h2>
+                </div>
+                <div class="panel-body blue-panel">
+                  <ul>
+                    <li>King of Thailand Bhumibol Adulyadej (pictured), the world's longest-serving head of state, dies at the age of 88.</li>
+                    <li>Bob Dylan is awarded the Nobel Prize in Literature for "having created new poetic expressions within the great American song tradition".</li>
+                    <li>Colombian President Juan Manuel Santos is awarded the Nobel Peace Prize for his efforts to end the Colombian conflict.</li>
+                    <li>Hurricane Matthew kills more than 1,000 people, mainly in Haiti.</li>
+                    <li>Bernard L. Feringa, Jean-Pierre Sauvage, and Sir J. Fraser Stoddart are awarded the Nobel Prize in Chemistry for the synthesis of molecular machines.</li>
+                  </ul>
+                </div>
+              </div>
+              <div class="panel panel-info">
+                <div class="panel-heading">
+                  <h2 class="panel-title">On this day...</h2>
+                </div>
+                <div class="panel-body blue-panel">
+                  <p>October 13</p>
+                  <ul>
+                    <li>1710 – Queen Anne's War: The French surrender ending the Siege of Port Royal gave the British permanent possession of Nova Scotia.</li>
+                    <li>1812 – War of 1812: British troops and Mohawk warriors repelled an American invasion from across the Niagara River at the Battle of Queenston Heights near Queenston, Ontario.</li>
+                    <li>1911 – Prince Arthur, a son of Queen Victoria, became the first Governor General of Canada of royal descent, as well as the first Prince of Great Britain and Ireland to hold that position.</li>
+                    <li>1921 – The Soviet republics of Russia, Armenia, Azerbaijan, and Georgia signed the Treaty of Kars with the Grand National Assembly of Turkey to establish the contemporary borders between Turkey and the South Caucasus states.</li>
+                    <li>1958 – The first book featuring the English children's literature character Paddington Bear (statue pictured), created by Michael Bond and primarily illustrated by Peggy Fortnum, was published.</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="panel panel-info">
+              <div class="panel-heading">
+                <h2 class="panel-title">On this day...</h2>
+              </div>
+              <div class="panel-body">
+              </div>
             </div>
           </div>
         </div>
-    </div>
+      </div>
   </body>
 </html>
