add purple box with image

--- a/index.html
+++ b/index.html
@@ -106,8 +106,24 @@
             <a href="#"><li>Complete list</li></a>
           </ul>
           </div>
-        <div class="container">
-        <div class="main-float">
+          <ul class="nav nav-tabs">
+            <li role="presentation" class="active"><a href="#">Main Page</a></li>
+            <li role="presentation"><a href="#">Talk</a></li>
+            <li role="presentation"><a href="#">Read</a></li>
+            <li role="presentation"><a href="#">View source</a></li>
+            <li role="presentation"><a href="#">View history</a></li>
+          </ul>
+        </div>
+        <div class="container" id="main-body">
+          <div>
+            <ul class="nav nav-tabs">
+              <li role="presentation" class="active"><a href="#">Main Page</a></li>
+              <li role="presentation"><a href="#">Talk</a></li>
+              <li role="presentation"><a href="#">Read</a></li>
+              <li role="presentation"><a href="#">View source</a></li>
+              <li role="presentation"><a href="#">View history</a></li>
+            </ul>
+          </div>
               <div class="row well well-sm">
                 <div class="col-md-4">
                   <h1>Welcome to Wikipedia,</h1>
@@ -198,11 +214,12 @@
             </div>
           </div>
           <div class="row">
-            <div class="panel panel-info">
+            <div class="panel panel-danger">
               <div class="panel-heading">
-                <h2 class="panel-title">On this day...</h2>
+                <h2 class="panel-title">Today's Featured Picture</h2>
               </div>
-              <div class="panel-body">
+              <div class="panel-body red-panel">
+                <img src="img/wedding.jpg" alt="wedding picture" id="wedding">
               </div>
             </div>
           </div>
